--- a/src/style.css
+++ b/src/style.css
@@ -1,1 +1,20 @@
 @import "~bootstrap/dist/css/bootstrap.min.css";
+body {
+  background-color: green;
+}
+.card {
+  box-shadow: 10px;
+  font-family: "PT Sans", sans-serif;
+  font-weight: 700;
+  font-style: italic;
+  border-radius: 20px;
+}
+.top-palo {
+  font-size: 60px;
+}
+.numero {
+  font-size: 60px;
+}
+.butom-palo {
+  font-size: 60px;
+}
